--- a/todo/src/components/task/task.css
+++ b/todo/src/components/task/task.css
@@ -76,6 +76,7 @@
 	transition: color 0.4s;
 	font-weight: 400;
 	color: #4d4d4d;
+	max-width: 50%;
 }
 
 .todo-list li.completed label .description {
@@ -124,3 +125,32 @@
 .todo-list li.editing:last-child {
 	margin-bottom: -1px;
 }
+.todo-list li .icon-pause,
+.todo-list li .icon-play {
+	font-size: 18px;
+	width: 18px;
+	height: 18px;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.todo-list li .icon-play {
+	font-size: 15px;
+}
+
+.icon-pause:after {
+	content: '⏸';
+}
+.icon-play:after {
+	content: '▶';
+	color: #cc9a9a;
+}
+.timer-block{
+	display: flex;
+	justify-content: space-between;
+	width: 20%;
+	font-size: 13px;
+	align-items: center;
+}
+
+
